--- a/LecturerTrainer/View/GeneralSideTool.xaml
+++ b/LecturerTrainer/View/GeneralSideTool.xaml
@@ -216,11 +216,6 @@
 				</CheckBox>
 				<RadioButton GroupName="audienceButtonGroup" x:Name="twoD" Content="2D" Command ="{Binding Select2D}" Margin="34,10,10,0" VerticalAlignment="Top" FontFamily="{DynamicResource GeneralFontFamily}" Height="{DynamicResource GeneralFieldHeight}" FontSize="{DynamicResource GeneralFontSize}" IsEnabled="False" 
 							 Checked="twoD_Checked" Opacity="0.5">
-					<!--<i:Interaction.Triggers>
-						<i:EventTrigger EventName="Checked">
-							<ei:ControlStoryboardAction/>
-						</i:EventTrigger>
-					</i:Interaction.Triggers>-->
 					<RadioButton.Foreground>
 						<SolidColorBrush Color="{DynamicResource GeneralTextColor}"/>
 					</RadioButton.Foreground>
@@ -231,6 +226,15 @@
 						<SolidColorBrush Color="{DynamicResource GeneralTextColor}"/>
 					</RadioButton.Foreground>
 				</RadioButton>
+                <Grid x:Name="GridNumberRows" Opacity="0.5" Margin="30,0,0,0" IsEnabled="False">
+                    <Label x:Name="NumberRowsLabel" Content="Number of rows: " VerticalAlignment="Top" Height="27" FontFamily="{DynamicResource GeneralFontFamily}" FontSize="{DynamicResource GeneralFontSize}" Margin="0,0,10,0" HorizontalAlignment="Left" >
+                        <Label.Foreground>
+                            <SolidColorBrush Color="{DynamicResource GeneralTextColor}"/>
+                        </Label.Foreground>
+                    </Label>
+                    <ComboBox x:Name="NumberRowsComboBox" ItemsSource="{Binding NumberRows}" SelectedIndex="{Binding SelectedNumberRows}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100,0,0,0" Height="{DynamicResource GeneralFieldHeight}" Width="50" Grid.RowSpan="1" RenderTransformOrigin="1.069,0.587"/>
+                    
+                </Grid>
 			</StackPanel>
 		</Border>
 	</Grid>
